INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_FIND_ROOT_PATH}/usr/include)

AUX_SOURCE_DIRECTORY(. NET_CONFIG_SRC)

ADD_LIBRARY(netconfig ${NET_CONFIG_SRC})

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

FIND_LIBRARY(DBUS_LIBRARY NAMES "dbus-1" PATHS ${CMAKE_FIND_ROOT_PATH})
IF (DBUS_LIBRARY) 
    TARGET_LINK_LIBRARIES(netconfig ${DBUS_LIBRARY})
ENDIF(DBUS_LIBRARY)

FIND_LIBRARY(DBUSCPP_LIBRARY NAMES "libdbus-c++-1.a" PATHS ${CMAKE_FIND_ROOT_PATH})
IF (DBUSCPP_LIBRARY) 
    TARGET_LINK_LIBRARIES(netconfig ${DBUSCPP_LIBRARY})
ENDIF(DBUSCPP_LIBRARY)

TARGET_LINK_LIBRARIES(netconfig ${DBUS_LIBRARY})
