INCLUDE_DIRECTORIES(../library/modbus/)
INCLUDE_DIRECTORIES(inc)
INCLUDE_DIRECTORIES(src)
INCLUDE_DIRECTORIES(../dbus)

AUX_SOURCE_DIRECTORY(src DRIVER_SRC)

ADD_EXECUTABLE(rtu_driver ${DRIVER_SRC})

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
LINK_DIRECTORIES(${CMAKE_FIND_ROOT_PATH}/usr/lib)

FIND_LIBRARY(POCO_UTIL_LIBRARY NAMES libPocoUtil.a PATHS ${CMAKE_FIND_ROOT_PATH})
IF (POCO_UTIL_LIBRARY) 
    TARGET_LINK_LIBRARIES(rtu_driver ${POCO_UTIL_LIBRARY})
ENDIF(POCO_UTIL_LIBRARY)

FIND_LIBRARY(POCO_XML_LIBRARY NAMES libPocoXML.a PATHS ${CMAKE_FIND_ROOT_PATH})
IF (POCO_XML_LIBRARY) 
    TARGET_LINK_LIBRARIES(rtu_driver ${POCO_XML_LIBRARY})
ENDIF(POCO_XML_LIBRARY)

FIND_LIBRARY(POCO_NET_LIBRARY NAMES PocoNet PATHS ${CMAKE_FIND_ROOT_PATH})
IF (POCO_NET_LIBRARY) 
    TARGET_LINK_LIBRARIES(rtu_driver ${POCO_NET_LIBRARY})
ENDIF(POCO_NET_LIBRARY)

FIND_LIBRARY(POCO_FOUNDATION_LIBRARY NAMES PocoFoundation PATHS ${CMAKE_FIND_ROOT_PATH})
IF (POCO_FOUNDATION_LIBRARY) 
    TARGET_LINK_LIBRARIES(rtu_driver ${POCO_FOUNDATION_LIBRARY})
ENDIF(POCO_FOUNDATION_LIBRARY)

FIND_LIBRARY(PCRE_LIBRARY NAMES libpcre.a PATHS ${CMAKE_FIND_ROOT_PATH})
IF (PCRE_LIBRARY) 
    TARGET_LINK_LIBRARIES(rtu_driver ${PCRE_LIBRARY})
ENDIF(PCRE_LIBRARY)

#FIND_LIBRARY(DBUSCPP_LIBRARY NAMES "libdbus-c++-1.a" PATHS ${CMAKE_FIND_ROOT_PATH})
#IF (DBUSCPP_LIBRARY) 
#    TARGET_LINK_LIBRARIES(rtu_driver ${DBUSCPP_LIBRARY})
#ENDIF(DBUSCPP_LIBRARY)
#
#FIND_LIBRARY(DBUS_LIBRARY NAMES "libdbus-1.a" PATHS ${CMAKE_FIND_ROOT_PATH})
#IF (DBUS_LIBRARY) 
#    TARGET_LINK_LIBRARIES(rtu_driver ${DBUS_LIBRARY})
#ENDIF(DBUS_LIBRARY)

TARGET_LINK_LIBRARIES(rtu_driver modbus pthread rt
    #    web
    #    netconfig)
    ${POCO_FOUNDATION_LIBRARY}
    ${POCO_NET_LIBRARY})

AUX_SOURCE_DIRECTORY(test TEST_SRC)
ADD_EXECUTABLE(rtu_driver_test ${TEST_SRC})
TARGET_LINK_LIBRARIES(rtu_driver_test modbus pthread rt ${POCO_FOUNDATION_LIBRARY})
#TARGET_LINK_LIBRARIES(rtu_driver_test modbus pthread netconfig web ${POCO_FOUNDATION_LIBRARY})
