
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_FIND_ROOT_PATH}/usr/include)

AUX_SOURCE_DIRECTORY(. RTUSH_SRC)

ADD_EXECUTABLE(rtu_sh ${RTUSH_SRC})

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

FIND_LIBRARY(DBUS_LIBRARY NAMES libdbus-c++-1.a PATHS ${CMAKE_FIND_ROOT_PATH})
IF (DBUS_LIBRARY) 
    TARGET_LINK_LIBRARIES(rtu_sh ${DBUS_LIBRARY})
ENDIF(DBUS_LIBRARY)

FIND_LIBRARY(DBUS_LIB_LIBRARY NAMES libdbus-1.a PATHS ${CMAKE_FIND_ROOT_PATH})
IF (DBUS_LIB_LIBRARY) 
    TARGET_LINK_LIBRARIES(rtu_sh ${DBUS_LIB_LIBRARY})
ENDIF(DBUS_LIB_LIBRARY)

TARGET_LINK_LIBRARIES(rtu_sh pthread)
