
INCLUDE_DIRECTORIES(inc)
INCLUDE_DIRECTORIES(src)

AUX_SOURCE_DIRECTORY(. WEB_SRC)
AUX_SOURCE_DIRECTORY(src HTTP_SRC)

ADD_LIBRARY(web STATIC ${HTTP_SRC} ${WEB_SRC})

FIND_LIBRARY(POCO_NET_LIBRARY NAMES libPocoNet.a PATHS ${CMAKE_FIND_ROOT_PATH})
IF (POCO_NET_LIBRARY) 
    TARGET_LINK_LIBRARIES(web ${POCO_NET_LIBRARY})
ENDIF(POCO_NET_LIBRARY)

FIND_LIBRARY(POCO_FOUNDATION_LIBRARY NAMES libPocoFoundation.a PATHS ${CMAKE_FIND_ROOT_PATH})
IF (POCO_FOUNDATION_LIBRARY) 
    TARGET_LINK_LIBRARIES(web ${POCO_FOUNDATION_LIBRARY})
ENDIF(POCO_FOUNDATION_LIBRARY)

